# janus-clew

./: .bedrock_agentcore.yaml  .env.example  .gitignore  AMAZON_Q_USAGE.md  Dockerfile  Makefile  README.md  REFACTOR_COMPLETE.md  config.py  config_pydantic.py  exceptions.py  logger.py  pyproject.toml  requirements.txt  run.py  setup.py  simple_server.py  start_server.py
.bedrock_agentcore/backend_agent/: Dockerfile
Amazon Q Docs/: q-dev-chat-2025-11-29.md
backend/: __init__.py  __main__.py  agent.py  guardrails.py  models.py  requirements.txt  server.py  services.py
backend/services/: __init__.py  agentcore_integration.py  development_signature_prompts.py  pattern_detector.py  preference_analyzer.py  recommendation_engine.py  trajectory_analyzer.py
cli/: __init__.py  __main__.py  agentcore_caller.py  analyzer.py  aws_q_client.py  logger.py  main.py  rate_limiter.py  storage.py  timeout_handler.py  validators.py
frontend/: Dashboard.tsx  PatternsView.tsx  api.ts  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ExportCard.tsx  GrowthMetrics.tsx  SkillsView.tsx  Timeline.tsx
frontend/src/pages/: Dashboard.tsx  PatternsView.tsx
frontend/src/services/: api.ts
tests/: __init__.py  test_analyzer.py  test_guardrails.py  test_integration.py  test_phase2_services.py  test_storage.py
